--- a/app/src/main/res/menu/action_bar_done_menu.xml
+++ b/app/src/main/res/menu/action_bar_done_menu.xml
@@ -2,8 +2,8 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/back_button"
-        android:icon="@drawable/ic_action_back_button"
-        android:title=""
+    <item android:id="@+id/action_done"
+        android:icon="@drawable/ic_check"
+        android:title="@string/add_new"
         app:showAsAction="always" />
 </menu>
