--- a/app/src/main/res/menu/action_bar_list_menu.xml
+++ b/app/src/main/res/menu/action_bar_list_menu.xml
@@ -4,16 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_notifications"
-        android:icon="@drawable/ic_notifications"
-        android:title="@string/notifications"
+        android:id="@+id/action_users"
+        android:icon="@drawable/ic_group"
+        android:title="@string/users"
         app:showAsAction="ifRoom"
         tools:targetApi="o" />
 
     <item
-        android:id="@+id/action_account"
-        android:icon="@drawable/ic_account"
-        android:title="@string/account"
+        android:id="@+id/action_sort"
+        android:icon="@drawable/ic_sort"
+        android:title="@string/sort"
         app:showAsAction="ifRoom"
         tools:targetApi="o" />
 
