--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="grey">#C1C1C1</color>
     <color name="light_grey">#F0F0F0</color>
     <color name="light_blue">#489CDC</color>
+    <color name="beige">#E8CCA2</color>
     <color name="semi_transparent_black">#5E000000</color>
     //shortcuts' colors
     <color name="dark_blue">#6CB2CE</color>
